orchestrator/k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: marketing-assistant
  namespace: 0-marketing-assistant-demo
  labels:
    app: marketing-assistant
spec:
  host: marketing-assistant-0-marketing-assistant-demo.apps.cluster-qf44v.qf44v.sandbox543.opentlc.com
  to:
    kind: Service
    name: marketing-assistant
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
